<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/profile_background"
	    android:orientation="vertical" >
	
	    <EditText
	        android:id="@+id/course_add_tag"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/course_add_tag" >
	
	    </EditText>
	
	    <EditText
	        android:id="@+id/course_add_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/course_add_descriptive_name" />
	
	    <EditText
	        android:id="@+id/course_add_description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/course_add_description"
	        android:inputType="textMultiLine"
	        android:minLines="3" />
	
	    <EditText
	        android:id="@+id/course_add_max_students"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/course_add_max_attendants"
	        android:inputType="number" />
	
	    <TextView
	        android:id="@+id/add_course_label_start"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/course_add_start_date"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/white" />
	
	    <DatePicker
	        android:id="@+id/course_add_begin_date"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:calendarViewShown="false"
	        android:datePickerMode="spinner"
	        android:spinnersShown="true" />
	
	    <TextView
	        android:id="@+id/course_add_label_end"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/course_add_end_date"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <DatePicker
	        android:id="@+id/course_add_end_date"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:calendarViewShown="false"
	        android:datePickerMode="spinner"
	        android:spinnersShown="true" />
	
	    <Button
	        android:id="@+id/course_add_confirm_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/course_add_ok_button" />
	
	</LinearLayout>
</ScrollView>
