<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/assistance_list_element_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/assistance_list_element_nifstaticlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/assistance_list_element_fullname"
        android:text="@string/national_identity_number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/assistance_list_element_niffield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/assistance_list_element_nifstaticlabel"
        android:layout_alignBottom="@+id/assistance_list_element_nifstaticlabel"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/assistance_list_element_nifstaticlabel"
        android:text="&lt;&lt;ID>>"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/assistance_list_element_enrollmentid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/assistance_list_element_niffield"
        android:layout_alignParentRight="true"
        android:text="&lt;&lt;ENROLLID>>"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/assistance_list_element_enrollmentstaticlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/assistance_list_element_niffield"
        android:layout_alignBottom="@+id/assistance_list_element_niffield"
        android:layout_toLeftOf="@+id/assistance_list_element_enrollmentid"
        android:text="@string/enrollment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/assistance_list_element_absentswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/absent"
        android:textOff="@string/no"
        android:textOn="@string/yes" />

</RelativeLayout>
